--- a/CER1-ZUBICUETAVICENTE/comunidad.html
+++ b/CER1-ZUBICUETAVICENTE/comunidad.html
@@ -2,34 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Events - Comunidad</title>
-    <link rel="stylesheet" href="css/estilo.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <script src="js/script.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Smart Events - Comunidad </title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
+
     <header>
-        <h1>Bienvenido a Smart Events</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="header-branding">
+            <img src="img/logosmartevent.png" alt="Logo" class="logo">
+            <div class="brand-text">
+                <h1> Smart Events </h1>
+                <p> Todos tus eventos en un mismo lugar! </p>
+            </div>
+        </div>
+
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="principal.html"> Smart Events </a>
+                <a class="navbar-brand" href="principal.html" id="item"> Smart Events </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="principal.html">Principal</a>
+                            <a class="nav-link" href="principal.html" id="item">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="eventos.html">Eventos</a>
+                            <a class="nav-link" href="eventos.html" id="item">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="comunidad.html">Comunidad</a>
+                            <a class="nav-link" href="comunidad.html" id="item">Comunidad</a>
                         </li>
                     </ul>
                 </div>
@@ -37,20 +43,42 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Únete a la Comunidad</h2>
-            <p>
-                Conéctate con otros miembros de Smart Events y comparte tus
-                experiencias.
-            </p>
-            <!-- Información de la comunidad -->
-        </section>
+
+    <main class="container my-5">
+        <h1 class="text-center mb-4">Comunidad</h1>
+
+        <div id="lista_comentarios">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h6 class="card-subtitle mb-2 text-muted">Equipo Smart Events - 06/09/2025</h6>
+                    <p class="card-text">¡Déjanos tu comentario y sé parte de la comunidad!</p>
+                </div>
+            </div>
+        </div>
+
+        <form id="formulario_comentarios" class="mt-5">
+            <h4>Deja tu comentario</h4>
+            <div class="mb-3">
+                <label for="alias" class="form-label">Nombre o Alias</label>
+                <input type="text" class="form-control" id="alias" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="message" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="message" rows="3" maxlength="500" required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Publicar</button>
+        </form>
     </main>
 
     <footer>
         <p>&copy; 2024 Smart Events. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="js/bootstrap.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
