--- a/CER1-ZUBICUETAVICENTE/eventos.html
+++ b/CER1-ZUBICUETAVICENTE/eventos.html
@@ -7,30 +7,35 @@
     <title> Smart Events - Eventos </title>
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/script.js"></script>
-    <script src="js/bootstrap.js"></script>
 </head>
 
 <body>
 
     <header>
-        <h1> Bienvenido a Smart Events </h1>
+        <div class="header-branding">
+            <img src="img/logosmartevent.png" alt="Logo" class="logo">
+            <div class="brand-text">
+                <h1> Smart Events </h1>
+                <p> Todos tus eventos en un mismo lugar! </p>
+            </div>
+        </div>
+
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="principal.html"> Smart Events </a>
+                <a class="navbar-brand" href="principal.html" id="item"> Smart Events </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="principal.html">Principal</a>
+                            <a class="nav-link" href="principal.html" id="item">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="eventos.html">Eventos</a>
+                            <a class="nav-link" href="eventos.html" id="item">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="comunidad.html">Comunidad</a>
+                            <a class="nav-link" href="comunidad.html" id="item">Comunidad</a>
                         </li>
                     </ul>
                 </div>
@@ -39,22 +44,70 @@
     </header>
 
 
-    <main>
-        <section>
-            <h2> Próximos Eventos </h2>
-            <p> Aquí puedes encontrar los próximos eventos organizados por Smart Events. </p>
-            <!-- Aquí se mostrará la lista de eventos dinámicamente en el futuro -->
-            <ul id="event-list">
-                <li>Evento de ejemplo 1 - Fecha: 10/07/2024</li>
-                <li>Evento de ejemplo 2 - Fecha: 15/07/2024</li>
-            </ul>
-        </section>
+    <main class="container my-5">
+        <div class="container my-5">
+            <h1 class="mb-4">Próximos Eventos:</h1>
+            <div class="row">
 
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <img src="img/comite-de-bioseguridad1.webp" class="card-img-top" alt="evento1">
+                        <div class="card-body d-flex flex-column">
+                            <h4 class="card-title">Charla informativa “Prevención y seguridad en la investigación
+                                científica”</h4>
+                            <p class="card-text">La Universidad Técnica Federico Santa María, a través del Comité de
+                                Bioseguridad de (CBS-USM) les invita cordialmente a participar de esta charla
+                                informativa.
+                                La actividad se realizará en formato virtual el martes 9 de septiembre, a las 12:30
+                                horas, orientada a quienes estén involucrados en proyectos de investigación
+                                experimental.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más información</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <img src="img/Muestra-costumbrista-SEDE-VINA-DEL-MAR-1.jpg" class="card-img-top" alt="evento2">
+                        <div class="card-body d-flex flex-column">
+                            <h4 class="card-title">Muestra Costumbrista 2025 Sede Viña del Mar</h4>
+                            <p class="card-text"> La Dirección de Asuntos Estudiantiles, en conjunto con la Dirección de
+                                Gestión y Desarrollo de Personas y el Comité Paritario de la Sede Viña del Mar, tiene el
+                                agrado de invitar a toda la comunidad universitaria a participar en una nueva versión de
+                                la “Muestra Costumbrista 2025”, que se llevará a cabo el martes 9 de septiembre, a
+                                partir de las 12:30 horas, en la Plaza Cívica de la Sede Viña del Mar. </p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más información</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="img/Feed-Slimming-VALPARAÍSO-2.jpg" class="card-img-top" alt="evento3">
+                        <div class="card-body d-flex flex-column">
+                            <h4 class="card-title">Luis Slimming presenta su show en el Teatro Aula Magna USM</h4>
+                            <p class="card-text"> El destacado comediante nacional Luis Slimming, también conocido como
+                                “Don comedia”, presentará su nuevo show de stand up en el Teatro Aula Magna USM, Campus
+                                Casa Central Valparaíso. 
+                                <br>
+                                Venta de entradas en <a href="https://www.ticketpro.cl/evento/3902/luis-slimming-don-comedia--valparaiso"> http://www.ticketpro.cl </a> 
+                                <br>
+                                *Este evento es de carácter externo y es organizado por Bug Producciones. </p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más información</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2024 Smart Events. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="js/script.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 </body>
 
