--- a/CER1-ZUBICUETAVICENTE/principal.html
+++ b/CER1-ZUBICUETAVICENTE/principal.html
@@ -13,10 +13,10 @@
 
     <header>
         <div class="header-branding">
-            <img src="img/logosmartevent.png" alt="Logo" class="logo">
+            <img src="img/logosmartevent.png" alt="Logo" class="logo" id="titulo">
             <div class="brand-text">
-                <h1> Smart Events </h1>
-                <p> Todos tus eventos en un mismo lugar! </p>
+                <h1 id="titulo"> Smart Events </h1>
+                <p id="subt"> Todos tus eventos en un mismo lugar! </p>
             </div>
         </div>
 
