--- a/CER1-ZUBICUETAVICENTE/comunidad.html
+++ b/CER1-ZUBICUETAVICENTE/comunidad.html
@@ -59,13 +59,13 @@
         <form id="formulario_comentarios" class="mt-5">
             <h4>Deja tu comentario</h4>
             <div class="mb-3">
-                <label for="alias" class="form-label">Nombre o Alias</label>
-                <input type="text" class="form-control" id="alias" required>
+                <label for="nom" class="form-label">Nombre o Alias</label>
+                <input type="text" class="form-control" id="nom" required>
             </div>
 
             <div class="mb-3">
-                <label for="message" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="message" rows="3" maxlength="500" required></textarea>
+                <label for="msg" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="msg" rows="3" maxlength="500" required></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Publicar</button>
